[package]
name = "ed-system-search"
version = "1.1.27"
authors = ["Billie Thompson <billie@billiecodes.com>"]
edition = "2018"
description = "Find interesting systems in the EDSM data dump"
repository = "https://github.com/PurpleBooth/ed-system-search/"
license = "CC0-1.0"
categories = [ "command-line-interface", "command-line-utilities" ]
keywords = [ "elite", "elite-dangerous" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive", "cargo", "wrap_help", "yaml", "env", "unicode" ] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
indoc = "1.0.4"
thiserror = "1.0.30"
flate2 = "1.0.22"
miette = { version = "4.1.0", features = ["fancy"] }
