[package]
name = "ed-system-search"
version = "1.1.43"
authors = ["Billie Thompson <billie@billiecodes.com>"]
edition = "2018"
description = "Find interesting systems in the EDSM data dump"
repository = "https://github.com/PurpleBooth/ed-system-search/"
license = "CC0-1.0"
categories = [ "command-line-interface", "command-line-utilities" ]
keywords = [ "elite", "elite-dangerous" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.14", features = ["derive", "cargo", "wrap_help", "yaml", "env", "unicode" ] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
indoc = "1.0.4"
thiserror = "1.0.31"
flate2 = { version = "1.0.22", features = ["tokio"] }
miette = { version = "4.6.0", features = ["fancy"] }
tokio = { version = "1.18.0", features = ["full"] }
futures = "0.3.21"
